# smile_engine

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/example/smile_engine/: SmileEnginePlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: smile_engine.podspec
ios/Assets/: DHF_bayesianNetwork_day1.xdsl
ios/Classes/: SMILE-Engine-Dengue.cpp  SmileEnginePlugin.swift
ios/Classes/includes/: bkgndknowledge.h  bs.h  case.h  dbcml.h  deftruthtable.h  dmatrix.h  em.h  errorhandler.h  general.h  generalequation.h  nb.h  pattern.h  platform.h  qualdef.h  randgen.h  smile_license.h  submodel.h  valbeliefvector.h  valequationevaluation.h  validator.h
ios/Classes/targets/arm64-v8a/: abn.h  defcpt.h  defdecision.h  defmau.h  diagcaselibrary.h  idarray.h  intarray.h  lazydef.h  node.h  nodedef.h  pc.h  syscoord.h  valpolicyvalues.h  valueofinfo.h
ios/Classes/targets/armeabi-v7a/: cidef.h  datagenerator.h  dataset.h  defnoisymax.h  defutility.h  discdef.h  discval.h  network.h  numarray.h  sensitivity.h  smile.h  tan.h  valmauexpectedutility.h
ios/Classes/targets/x86_64/: autolink.h  defdemorgan.h  defequation.h  defnoisyadder.h  (+8 more)
lib/: smile_engine.dart  smile_engine_method_channel.dart  smile_engine_platform_interface.dart
test/: smile_engine_method_channel_test.dart  smile_engine_test.dart
(+3 files in other folders)
